[gd_scene load_steps=10 format=2]

[ext_resource path="res://actors/level/Level.gd" type="Script" id=1]
[ext_resource path="res://actors/level/Playground.gd" type="Script" id=2]
[ext_resource path="res://actors/level/Factory.gd" type="Script" id=3]
[ext_resource path="res://actors/envelope/Envelope.tscn" type="PackedScene" id=4]
[ext_resource path="res://actors/level/Timer.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 5, 330 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 540, 5 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 360, 220 )

[sub_resource type="Curve" id=4]

min_value = 0.1
max_value = 2.0
bake_resolution = 100
_data = [ Vector2( 0, 0.56512 ), 0.0, 0.0, 0, 0, Vector2( 0.241617, 0.41464 ), 0.0, 0.0, 0, 0, Vector2( 0.56294, 0.23072 ), -4.3448, 0.933498, 0, 0, Vector2( 1, 0.1 ), 0.0, 0.0, 0, 0 ]

[node name="Level" type="Control"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Rect", "curve" ]

[node name="Playground" type="StaticBody2D" parent="."]
position = Vector2( 152, 80 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
script = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Corner" type="Position2D" parent="Playground"]
position = Vector2( 720, 440 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionLeft" type="CollisionShape2D" parent="Playground"]
position = Vector2( -50, 220 )
shape = SubResource( 1 )

[node name="CollisionRight" type="CollisionShape2D" parent="Playground"]
position = Vector2( 770, 220 )
shape = SubResource( 1 )

[node name="CollisionUp" type="CollisionShape2D" parent="Playground"]
position = Vector2( 360, -50 )
shape = SubResource( 2 )

[node name="CollisionDown" type="CollisionShape2D" parent="Playground"]
position = Vector2( 360, 490 )
shape = SubResource( 2 )

[node name="GameArea" type="Area2D" parent="Playground"]
position = Vector2( 360, 220 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 4
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"

[node name="Collision" type="CollisionShape2D" parent="Playground/GameArea"]
shape = SubResource( 3 )

[node name="Factory" type="Node" parent="."]
script = ExtResource( 3 )
envelopeScene = ExtResource( 4 )

[node name="Timer" type="Timer" parent="."]
process_mode = 1
wait_time = 0.05
one_shot = false
autostart = false
script = ExtResource( 5 )
_sections_unfolded = [ "curve" ]
curve = SubResource( 4 )
length = null

[connection signal="body_entered" from="Playground/GameArea" to="Playground" method="_on_GameArea_body_entered"]
[connection signal="more_envelopes" from="Factory" to="." method="_on_Factory_more_envelopes"]
[connection signal="no_more_envelopes" from="Factory" to="." method="_on_Factory_no_more_envelopes"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer" to="Timer" method="_on_Timer_timeout"]
